[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "freshchat"
packages = [
    { include = "freshchat" },
]
version = "0.6.0-alpha.0"
description = "A library provide a http client for Freshchat API"
authors = [
    "Twyla Engineering <software@twyla.ai>",
    "Maria Soulountsi <mariasoul01@gmail.com>"
]
license = "MIT"

readme = "README.md"

repository = "https://github.com/twyla-ai/python-freshchat"

keywords = []

classifiers = []

[tool.poetry.dependencies]
python = "^3.6"
cafeteria = "^0.19"
aiohttp = "^3.6"
pycrypto = "^2.6"
dataclasses = { version = ">=0.6,<0.8", python = "~3.6" }

[tool.poetry.dev-dependencies]
pre-commit = "^2.1"
flake8 = "^3.5"
coverage = "^5.0"
black = "^19.10b0"
tox = "^3.14"
pytest = "^5.4"
aioresponses = "^0.6"
pytest-asyncio = "^0.10"
pytest-cov = "^2.8"
